# todorust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.docs/: task.md  ux-redesign.md
.github/workflows/: release.yml
src/: db.rs  main.rs
src/app/: mod.rs  ui_state.rs
src/settings/: mod.rs  theme.rs
src/ui/: dashboard.rs  details.rs  due_modal.rs  edit_sheet.rs  mod.rs  notes_modal.rs  settings.rs  statistics.rs  task_list.rs
