[package]
name = "todorust"
version = "0.1.0"
edition = "2021"
authors = ["Mikolaj Rutecki", "Mikolaj Rutecki <ruteckimikolaj+crates.io@gmail.com>"]
description = "A minimalist, powerful, terminal-based to-do manager written in Rust"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/ruteckimikolaj/todorust"
homepage = "https://github.com/ruteckimikolaj/todorust"
keywords = ["todo", "tasks", "productivity", "terminal", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [
    ".github/*",
    "assets/*",
    "LICENSE",
    "README.md",
]

[dependencies]
ratatui = { version = "0.30.0", features = ["all-widgets"] }
ratatui-textarea = "0.9.1"
crossterm = "0.29.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.149"
rusqlite = { version = "0.31", features = ["bundled"] }
notify-rust = "4.17.0"
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
uuid = { version = "1", features = ["v4"] }

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update && apt-get --assume-yes install libdbus-1-dev:arm64",
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update && apt-get --assume-yes install libdbus-1-dev",
]

[badges]
maintenance = { status = "actively-developed" }
